[package]
name = "td"
version = "0.1.0"
authors = ["Wim Berchmans <wim.berchmans@porphyrio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.11"
app_dirs = "1.2.1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
